# openchat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  openapi.json  openapi.yaml
.github/workflows/: ci.yml
crates/openchat-server/: Cargo.toml
crates/openchat-server/migrations/: 20250322120000_create_users.sql
crates/openchat-server/src/: api_doc.rs  error.rs  handlers.rs  jwt.rs  lib.rs  main.rs  password.rs  state.rs
crates/openchat-server/tests/: auth.rs  health.rs  openapi.rs
crates/openchat-server/tests/common/: mod.rs
workflow/: README.md
workflow/00-rule/: current-state.md  meta-rule.md  self.md  soul.md
workflow/00-rule/trace/: README.md
workflow/01-research/: 01-开源IM生态与OpenClaw集成调研.md  02-OpenClaw本地代码技术调研.md  03-VoceChat服务端本地代码技术调研.md  README.md
workflow/02-design/: 01-技术架构.md  02-数据模型.md  03-API与集成契约.md  04-代码仓库结构.md  05-协作与演进治理.md  README.md
workflow/03-plan/: 01plan.md  02plan.md  README.md
workflow/04-test/: README.md
