[package]
name = "openchat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenChat API server (MVP)"

[[bin]]
name = "openchat-server"
path = "src/main.rs"

[lib]
name = "openchat_server"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
