[package]
name = "openchat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenChat API server (MVP)"

[[bin]]
name = "openchat-server"
path = "src/main.rs"

[lib]
name = "openchat_server"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["getrandom"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"

[[bin]]
name = "export-openapi"
path = "src/bin/export-openapi.rs"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
